tests/ui/lifetimes/issue-17728.stderr
error[E0308]: mismatched types
  --> $DIR/issue-17728.rs:99:5
   |
LL |   fn str_to_direction(to_parse: &str) -> RoomDirection {
   |                                          ------------- expected `RoomDirection` because of return type
LL | /     match to_parse {
LL | |
LL | |         "w" | "west" => RoomDirection::West,
LL | |         "e" | "east" => RoomDirection::East,
...  |
LL | |         _ => None
LL | |     }
   | |_____^ expected `RoomDirection`, found `Option<RoomDirection>`
   |
   = note: expected enum `RoomDirection`
              found enum `Option<RoomDirection>`
help: consider using `Option::expect` to unwrap the `Option<RoomDirection>` value, panicking if the value is an `Option::None`
   |
LL |     }.expect("REASON")
   |      +++++++++++++++++

error: lifetime may not live long enough
  --> $DIR/issue-17728.rs:15:28
   |
LL |     fn attemptTraverse(&self, room: &Room, directionStr: &str) -> Result<&Room, &str> {
   |                        -            - let's call the lifetime of this reference `'1`
   |                        |
   |                        let's call the lifetime of this reference `'2`
...
LL |             Some(entry) => Ok(entry),
   |                            ^^^^^^^^^ method was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`
   |
help: consider introducing a named lifetime parameter
   |
LL |     fn attemptTraverse<'a>(&self, room: &'a Room, directionStr: &str) -> Result<&'a Room, &'a str> {
   |                       ++++               ++                                      ++        ++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
